fix code with perfect pixel & update variles.css

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -71,7 +71,6 @@
             </div>
         </div>
         <!--banner section end-->
-
         <!--product section start-->
         <section class="product">
             <div class="container product">
@@ -103,39 +102,50 @@
             </div>
         </section>
         <!--product section end-->
-
         <!--functions section start-->
         <section class="functions">
             <div class="container functions">
                 <h2 class="functions__headline">Make your work easier</h2>
                 <div class="feature">
                     <div class="feature__descripstion">
-                        <img src="./assets/image/report.png" alt="Reports">
+                        <div class ="feature-img">
+                            <img src="./assets/image/report.png" alt="Reports">
+                        </div>
                         <h4>Team Surveys & Reports</h4>
                         <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                     </div>
                     <div class="feature__descripstion">
-                        <img src="./assets/image/collab.png" alt="Collaborative">
+                        <div class ="feature-img">
+                            <img src="./assets/image/collab.png" alt="Collaborative"> 
+                        </div>
                         <h4>Collaborative 1:1</h4>
                         <p>Build relationships by planning 1-on-1s and start meetings.</p>
                     </div>
                     <div class="feature__descripstion">
-                        <img src="./assets/image/center.png" alt="Learning center">
+                        <div class ="feature-img">
+                            <img src="./assets/image/center.png" alt="Learning center">
+                        </div>
                         <h4>Learning Center</h4>
                         <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                     </div>
                     <div class="feature__descripstion">
-                        <img src="./assets/image/mess.png" alt="Messaging">
+                        <div class ="feature-img">
+                            <img src="./assets/image/mess.png" alt="Messaging">
+                        </div>
                         <h4>Anonymous Messaging</h4>
                         <p>Develop trust in a safe channel for important conversations.</p>
                     </div>
                     <div class="feature__descripstion">
-                        <img src="./assets/image/conver.png" alt="Conversation">
+                        <div class ="feature-img">
+                            <img src="./assets/image/conver.png" alt="Conversation">
+                        </div>
                         <h4>Conversation Engine</h4>
                         <p>Communicate confidently with recommended talking points.</p>
                     </div>
                     <div class="feature__descripstion">
-                        <img src="./assets/image/manage.png" alt="Manager">
+                        <div class ="feature-img">
+                            <img src="./assets/image/manage.png" alt="Manager">
+                        </div>
                         <h4>Exclusives Manager</h4>
                         <p>Access manager tips, activities and best practices from our team of experts.</p>
                     </div>
@@ -143,7 +153,6 @@
             </div>
         </section>
         <!--funtions section end-->
-
         <!--charts section start-->
         <section class="charts">
             <div class="container charts">
@@ -158,7 +167,6 @@
             </div>
         </section>
         <!--charts section end-->
-
         <!--about-us section start-->
         <section class="about-us">
             <div class="about-us__content">
@@ -218,7 +226,6 @@
             </div>
         </section>
         <!--about-us section end-->
-
         <!--footer start-->
         <footer>
             <div class="footer__content">
