--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -24,7 +24,7 @@
                     </nav>
                     <div class="header__login-get-free">
                         <a href="#">Log in </a>
-                        <a href="#" class="active">Get started free</a>
+                        <button class="header-button">Get started free</button>
                     </div>
                 </div>
             </header>
@@ -80,22 +80,22 @@
                 <div class="product__content">
                     <div class="survey-feature">
                         <div class="text">
-                            <p class="survey-feature-title">Survey your team</p>
+                            <h4>Survey your team</h4>
                             <p>Powerful questions that get to the heart of how team members really feel.</p>
                         </div>
                     </div>
                     <div class="ad-feature">
-                        <p class="ad-feature-title">Resolve issues quickly</p>
+                        <h4>Resolve issues quickly</h4>
                         <p>Anonymous messaging that connects managers and employees.</p>
                         <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     </div>
                     <div class="ad-feature">
-                        <p class="ad-feature-title">Plan your 1-on-1s</p>
+                        <h4>Plan your 1-on-1s</h4>
                         <p>Plan meetings together and give a stake employees and teams.</p>
                         <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     </div>
                     <div class="ad-feature">
-                        <p class="ad-feature-title">Track your progress</p>
+                        <h4>Track your progress</h4>
                         <p>Easy-to-read reports and sharable results help managers and teams.</p>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                 <div class="chart__content">
                     <h2> We work how you work everyday</h2>
                     <p>Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
-                    <button>Get started free</button>
+                    <button class="chart-button">Get started free</button>
                 </div>
                 <div class="chart-image">
                     <img src="assets/image/charts.png" alt="Charts">
