--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -12,7 +12,7 @@
             <header class="header">
                 <div class="container header">
                     <div class="header__logo">
-                        <img src="./assets/image/team.flow.png" alt="logo">
+                        <img src="./assets/image/icon/team.flow.svg" alt="logo">
                     </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
