fix according to comments

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -16,10 +16,10 @@
                     </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
-                            <li>How it Works <img src="./assets/image/down.png" alt="arrow"></li>
-                            <li>Product <img src="./assets/image/down.png" alt="arrow"></li>
-                            <li>Pricing </li>
-                            <li>Resources <img src="./assets/image/down.png" alt ="arrow"></li>
+                            <li><a href="#">How it Works <img src="./assets/image/down.png" alt="arrow"></a></li>
+                            <li><a href="#">Product <img src="./assets/image/down.png" alt="arrow"></a></li>
+                            <li><a href="#">Pricing</a></li>
+                            <li><a href="#">Resources <img src="./assets/image/down.png" alt ="arrow"></a></li>
                         </ul>
                     </nav>
                     <div class="header__login-get-free">
@@ -34,7 +34,7 @@
                         <p>Save 90%</p>
                     </div>
                     <div class="banner__get-acc">
-                        <p>Get account of $59 <img src="./assets/image/arrow.png" alt="get account of $59"></p>
+                        <p><a href="#">Get account of $59 <img src="./assets/image/arrow.png" alt="get account of $59"></a></p>
                     </div>
                 </div>
                 <div class="banner__content">
@@ -52,19 +52,29 @@
                     <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
                     <div class="banner__logo">
                         <div class="gg">
-                            <img src="assets/image/icon/google.svg" alt="google">
+                            <a href="#">
+                                <img src="assets/image/icon/google.svg" alt="google">
+                            </a>
                         </div>
                         <div class="air">
-                            <img src="../src/assets/image/icon/airbnb.svg" alt="airbnb">
+                            <a href="#">
+                                <img src="../src/assets/image/icon/airbnb.svg" alt="airbnb">
+                            </a>
                         </div>
                         <div class="fb">
-                            <img src="./assets/image/icon/fb.svg" alt ="facebook">
+                            <a href="#">
+                                <img src="./assets/image/icon/fb.svg" alt ="facebook">
+                            </a>  
                         </div>
                         <div class="hub">
-                            <img src="./assets/image/icon/hub.svg" alt="hub">
+                            <a href="#">
+                                <img src="./assets/image/icon/hub.svg" alt="hub">
+                            </a>
                         </div>
                         <div class="slack">
-                            <img src="./assets/image/icon/slack.svg" alt="slack">
+                            <a href="#">
+                                <img src="./assets/image/icon/slack.svg" alt="slack">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -220,8 +230,12 @@
             <div class="install-section">
                 <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                 <div class="install-app">
-                    <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
-                    <img class="app-store" src="assets/image/appstore.png" alt="appstore">
+                    <a href ="#">
+                        <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
+                    </a>
+                    <a href ="#">
+                        <img class="app-store" src="assets/image/appstore.png" alt="appstore">
+                    </a>
                 </div>
             </div>
         </section>
@@ -257,8 +271,12 @@
                 <div class="app">
                     <p>Install App</p>
                     <div class="footer__install-app">
-                        <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt="google play">
-                        <img class="footer__app-store" src="assets/image/footer-appstore.png" alt="appstore">
+                        <a href="#">
+                            <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt="google play">
+                        </a>
+                        <a href="#">
+                            <img class="footer__app-store" src="assets/image/footer-appstore.png" alt="appstore">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -267,10 +285,18 @@
                 <div class="container footer__copy-right">
                     <p class="copy-right">© 2020 - All rights reserved</p>
                     <div class="social-icon">
-                        <img class="icon" src="assets/image/icon/ins.svg" alt="icon">
-                        <img class="icon" src="assets/image/icon/basketball.svg" alt="icon">
-                        <img class="icon" src="assets/image/icon/twitter.svg" alt="icon">
-                        <img class="icon" src="assets/image/icon/youtube.svg" alt="icon">
+                        <a href="#">
+                            <img class="icon" src="assets/image/icon/ins.svg" alt="icon">
+                        </a>
+                        <a href="#">
+                            <img class="icon" src="assets/image/icon/basketball.svg" alt="icon">
+                        </a>
+                        <a href="#">
+                            <img class="icon" src="assets/image/icon/twitter.svg" alt="icon">
+                        </a>
+                        <a href="#">
+                            <img class="icon" src="assets/image/icon/youtube.svg" alt="icon">
+                        </a>npm
                     </div>
                 </div>
             </div>
