apply 7-1 pattern, scss

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Practice1</title>
-        <link rel="stylesheet" href="../src/style/index.css">
+        <link rel="stylesheet" href="../src/style/sass/index.css">
     </head>
     <body>
         <!--banner section start-->
@@ -296,7 +296,7 @@
                         </a>
                         <a href="#">
                             <img class="icon" src="assets/image/icon/youtube.svg" alt="icon">
-                        </a>npm
+                        </a>
                     </div>
                 </div>
             </div>
