mobile first: header & banner

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -26,10 +26,15 @@
                         <a href="#">Log in </a>
                         <button class="header-button">Get started free</button>
                     </div>
+                    <div class="menu">
+                        <button class="menu-icon" alt="Menu"><img src="./assets/image/icon/menu.svg"></button>
+                        <p>MENU</p>
+                    </div>
                 </div>
             </header>
             <div class="banner__sign-up">
-                <div class="banner__discount">
+                <div class="container banner__sign-up">
+                                    <div class="banner__discount">
                     <div class="banner__save">
                         <p>Save 90%</p>
                     </div>
@@ -78,6 +83,8 @@
                         </div>
                     </div>
                 </div>
+                </div>
+
             </div>
         </div>
         <!--banner section end-->
