--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Practice1</title>
-        <link rel="stylesheet" href="../../Practice01/src/style/sass/index.css">
+        <link rel="stylesheet" href="../src/style/sass/index.css">
     </head>
     <body>
         <!--banner section start-->
@@ -26,10 +26,15 @@
                         <a href="#">Log in </a>
                         <button class="header-button">Get started free</button>
                     </div>
+                    <div class="menu">
+                        <button class="menu-icon" alt="Menu"><img src="./assets/image/icon/menu.svg"></button>
+                        <p>MENU</p>
+                    </div>
                 </div>
             </header>
             <div class="banner__sign-up">
-                <div class="banner__discount">
+                <div class="container banner__sign-up">
+                                    <div class="banner__discount">
                     <div class="banner__save">
                         <p>Save 90%</p>
                     </div>
@@ -78,6 +83,8 @@
                         </div>
                     </div>
                 </div>
+                </div>
+
             </div>
         </div>
         <!--banner section end-->
@@ -138,21 +145,21 @@
                         <h4>Learning Center</h4>
                         <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                     </div>
-                    <div class="feature__descripstion">
+                    <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
                             <img src="./assets/image/mess.png" alt="Messaging">
                         </div>
                         <h4>Anonymous Messaging</h4>
                         <p>Develop trust in a safe channel for important conversations.</p>
                     </div>
-                    <div class="feature__descripstion">
+                    <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
                             <img src="./assets/image/conver.png" alt="Conversation">
                         </div>
                         <h4>Conversation Engine</h4>
                         <p>Communicate confidently with recommended talking points.</p>
                     </div>
-                    <div class="feature__descripstion">
+                    <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
                             <img src="./assets/image/manage.png" alt="Manager">
                         </div>
@@ -160,6 +167,7 @@
                         <p>Access manager tips, activities and best practices from our team of experts.</p>
                     </div>
                 </div>
+                <button class="btn-view">View more benefits</button>
             </div>
         </section>
         <!--funtions section end-->
@@ -202,7 +210,7 @@
                     <div class="baseline--visibility-hidden">
                         <img src="assets/image/cust-line.png" alt="baseline">
                     </div>
-                    <div class="customer-infor">
+                    <div class="customer-infor-hidden">
                         <div class="customer-ava"  >
                             <img src="assets/image/bell.png" alt="customer">
                         </div>
@@ -216,7 +224,7 @@
                     <div class="baseline--visibility-hidden">
                         <img src="assets/image/cust-line.png" alt="baseline">
                     </div>
-                    <div class="customer-infor">
+                    <div class="customer-infor-hidden">
                         <div class="customer-ava" >
                             <img  src="assets/image/beth.png" alt="customer">
                         </div>
@@ -251,6 +259,7 @@
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
+                    <img class="vector" src="./assets/image/icon/Vector.svg">
                 </div>
                 <div class="support">
                     <p>Support</p>
@@ -259,6 +268,7 @@
                         <li><a href="#">Safety Center</a></li>
                         <li><a href="#">Community</a></li>
                     </ul>
+                    <img class="vector" src="./assets/image/icon/Vector.svg">
                 </div>
                 <div class="legal">
                     <p>Legal</p>
@@ -267,6 +277,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms of Service</a></li>
                     </ul>
+                    <img class="vector" src="./assets/image/icon/Vector.svg">
                 </div>
                 <div class="app">
                     <p>Install App</p>
@@ -296,7 +307,7 @@
                         </a>
                         <a href="#">
                             <img class="icon" src="assets/image/icon/youtube.svg" alt="icon">
-                        </a>npm
+                        </a>
                     </div>
                 </div>
             </div>
