Update Practice 1 & Fix Practice 2

--- a/Practice01/src/index.html
+++ b/Practice01/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Practice1</title>
-        <link rel="stylesheet" href="../../Practice01/src/style/sass/index.css">
+        <link rel="stylesheet" href="../../Practice01/src/style/main.css">
     </head>
     <body>
         <!--banner section start-->
@@ -12,14 +12,16 @@
             <header class="header">
                 <div class="container header">
                     <div class="header__logo">
-                        <img src="./assets/image/icon/team.flow.svg" alt="logo">
+                        <a href="#">
+                            <img src="./assets/image/icon/team.flow.svg" alt="logo">
+                        </a>
                     </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
-                            <li><a href="#">How it Works <img src="./assets/image/down.png" alt="arrow"></a></li>
-                            <li><a href="#">Product <img src="./assets/image/down.png" alt="arrow"></a></li>
+                            <li><a href="#">How it Works <img src="../../Practice01/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
+                            <li><a href="#">Product <img src="../../Practice01/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
                             <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Resources <img src="./assets/image/down.png" alt ="arrow"></a></li>
+                            <li><a href="#">Resources <img src="../../Practice01/src/assets/image/icon/arrow.svg" alt ="arrow"></a></li>
                         </ul>
                     </nav>
                     <div class="header__login-get-free">
@@ -34,7 +36,7 @@
                         <p>Save 90%</p>
                     </div>
                     <div class="banner__get-acc">
-                        <p><a href="#">Get account of $59 <img src="./assets/image/arrow.png" alt="get account of $59"></a></p>
+                        <p><a href="#">Get account of $59 <img src="../../Practice01/src/assets/image/icon/arrow.sv" alt="get account of $59"></a></p>
                     </div>
                 </div>
                 <div class="banner__content">
@@ -296,7 +298,7 @@
                         </a>
                         <a href="#">
                             <img class="icon" src="assets/image/icon/youtube.svg" alt="icon">
-                        </a>npm
+                        </a>
                     </div>
                 </div>
             </div>
