--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Practice1</title>
-        <link rel="stylesheet" href="../src/style/sass/index.css">
+        <title>Practice2</title>
+        <link rel="stylesheet" href="../src/style/sass/index.scss">
     </head>
     <body>
         <!--banner section start-->
@@ -12,14 +12,16 @@
             <header class="header">
                 <div class="container header">
                     <div class="header__logo">
-                        <img src="./assets/image/icon/team.flow.svg" alt="logo">
+                        <a href="#">
+                            <img src="./assets/image/icon/team.flow.svg" alt="logo">
+                        </a>
                     </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
-                            <li><a href="#">How it Works <img src="./assets/image/down.png" alt="arrow"></a></li>
-                            <li><a href="#">Product <img src="./assets/image/down.png" alt="arrow"></a></li>
+                            <li><a href="#">How it Works <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
+                            <li><a href="#">Product <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
                             <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Resources <img src="./assets/image/down.png" alt ="arrow"></a></li>
+                            <li><a href="#">Resources <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt ="arrow"></a></li>
                         </ul>
                     </nav>
                     <div class="header__login-get-free">
@@ -39,7 +41,7 @@
                         <p>Save 90%</p>
                     </div>
                     <div class="banner__get-acc">
-                        <p><a href="#">Get account of $59 <img src="./assets/image/arrow.png" alt="get account of $59"></a></p>
+                        <p><a href="#">Get account of $59 <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="get account of $59"></a></p>
                     </div>
                 </div>
                 <div class="banner__content">
@@ -126,42 +128,42 @@
                 <div class="feature">
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="./assets/image/report.png" alt="Reports">
+                            <img src="../../Practice02/src/assets/image/icon/report.svg" alt="Reports">
                         </div>
                         <h4>Team Surveys & Reports</h4>
                         <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                     </div>
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="./assets/image/collab.png" alt="Collaborative"> 
+                            <img src="../../Practice02/src/assets/image/icon/collab.svg" alt="Collaborative"> 
                         </div>
                         <h4>Collaborative 1:1</h4>
                         <p>Build relationships by planning 1-on-1s and start meetings.</p>
                     </div>
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="./assets/image/center.png" alt="Learning center">
+                            <img src="../../Practice02/src/assets/image/icon/center.svg" alt="Learning center">
                         </div>
                         <h4>Learning Center</h4>
                         <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="./assets/image/mess.png" alt="Messaging">
+                            <img src="../../Practice02/src/assets/image/icon/mess.svg" alt="Messaging">
                         </div>
                         <h4>Anonymous Messaging</h4>
                         <p>Develop trust in a safe channel for important conversations.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="./assets/image/conver.png" alt="Conversation">
+                            <img src="../../Practice02/src/assets/image/icon/conver.svg" alt="Conversation">
                         </div>
                         <h4>Conversation Engine</h4>
                         <p>Communicate confidently with recommended talking points.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="./assets/image/manage.png" alt="Manager">
+                            <img src="../../Practice02/src/assets/image/icon/manage.svg" alt="Manager">
                         </div>
                         <h4>Exclusives Manager</h4>
                         <p>Access manager tips, activities and best practices from our team of experts.</p>
@@ -198,7 +200,7 @@
                     </div>
                     <div class="customer-infor">
                         <div class="customer-ava" >
-                            <img  src="assets/image/jorge.png" alt="customer">
+                            <img  src="../../Practice02/src/assets/image/icon/jorge.svg" alt="customer">
                         </div>
                         <div class="name-job">
                             <p class="name">Jorge Robertson</p>
@@ -212,7 +214,7 @@
                     </div>
                     <div class="customer-infor-hidden">
                         <div class="customer-ava"  >
-                            <img src="assets/image/bell.png" alt="customer">
+                            <img src="../../Practice02/src/assets/image/icon/bell.svg" alt="customer">
                         </div>
                         <div class="name-job">
                             <p class="name">Francisco Bell</p>
@@ -226,7 +228,7 @@
                     </div>
                     <div class="customer-infor-hidden">
                         <div class="customer-ava" >
-                            <img  src="assets/image/beth.png" alt="customer">
+                            <img  src="../../Practice02/src/assets/image/icon/beth.svg" alt="customer">
                         </div>
                         <div class="name-job">
                             <p class="name">Beth Fox</p>
@@ -239,10 +241,10 @@
                 <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                 <div class="install-app">
                     <a href ="#">
-                        <img class="gg-play" src="./assets/image/ggplay.png" alt="google play">
+                        <img class="gg-play" src="../../Practice02/src/assets/image/icon/ggplay.svg" alt="google play">
                     </a>
                     <a href ="#">
-                        <img class="app-store" src="assets/image/appstore.png" alt="appstore">
+                        <img class="app-store" src="../../Practice02/src/assets/image/icon/appstore.svg" alt="appstore">
                     </a>
                 </div>
             </div>
@@ -283,10 +285,10 @@
                     <p>Install App</p>
                     <div class="footer__install-app">
                         <a href="#">
-                            <img class="footer__gg-play" src="assets/image/footer-ggplay.png" alt="google play">
+                            <img class="footer__gg-play" src="../../Practice02/src/assets/image/icon/footer-ggplay.svg" alt="google play">
                         </a>
                         <a href="#">
-                            <img class="footer__app-store" src="assets/image/footer-appstore.png" alt="appstore">
+                            <img class="footer__app-store" src="../../Practice02/src/assets/image/icon/footer-appstore.svg" alt="appstore">
                         </a>
                     </div>
                 </div>
