--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -46,7 +46,7 @@
                 </div>
                 <div class="banner__content">
                     <h1 class="banner__heading">Manage the team everyone wants to be on</h1>
-                    <p class="banner__simple-text">Simple platform that lets you master what great managers do best as   develop trust, collaborate, and drive team performance</p>
+                    <p class="banner__simple-text">Simple platform that lets you master what great managers do best, as develop trust, collaborate, and drive team performance</p>
                 </div>
                 <div class="banner__box">
                     <input class="text-box" type="text" placeholder="name@yourcompany.com">
