--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -208,11 +208,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="customer-pro">
+                <div class="customer-pro-hidden">
                     <div class="baseline--visibility-hidden">
                         <img src="assets/image/cust-line.png" alt="baseline">
                     </div>
-                    <div class="customer-infor-hidden">
+                    <div class="customer-infor">
                         <div class="customer-ava"  >
                             <img src="../../Practice02/src/assets/image/icon/bell.svg" alt="customer">
                         </div>
@@ -222,11 +222,11 @@
                         </div>
                     </div>
                 </div>
-                <div class="customer-pro">
+                <div class="customer-pro-hidden">
                     <div class="baseline--visibility-hidden">
                         <img src="assets/image/cust-line.png" alt="baseline">
                     </div>
-                    <div class="customer-infor-hidden">
+                    <div class="customer-infor">
                         <div class="customer-ava" >
                             <img  src="../../Practice02/src/assets/image/icon/beth.svg" alt="customer">
                         </div>
