--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -195,10 +195,6 @@
             </div>
             <div class="customers-feedbacks">
                 <div class="customer-pro">
-                    <div class="baseline">
-                        <img src="assets/image/cust-line.png" alt="baseline">
-                    </div>
-                    <div class="customer-infor">
                         <div class="customer-ava" >
                             <img  src="../../Practice02/src/assets/image/icon/jorge.svg" alt="customer">
                         </div>
@@ -206,13 +202,8 @@
                             <p class="name">Jorge Robertson</p>
                             <p class="job">CS at Google</p>
                         </div>
-                    </div>
                 </div>
                 <div class="customer-pro-hidden">
-                    <div class="baseline--visibility-hidden">
-                        <img src="assets/image/cust-line.png" alt="baseline">
-                    </div>
-                    <div class="customer-infor">
                         <div class="customer-ava"  >
                             <img src="../../Practice02/src/assets/image/icon/bell.svg" alt="customer">
                         </div>
@@ -220,13 +211,8 @@
                             <p class="name">Francisco Bell</p>
                             <p class="job">Designer at Microsoft</p>
                         </div>
-                    </div>
                 </div>
                 <div class="customer-pro-hidden">
-                    <div class="baseline--visibility-hidden">
-                        <img src="assets/image/cust-line.png" alt="baseline">
-                    </div>
-                    <div class="customer-infor">
                         <div class="customer-ava" >
                             <img  src="../../Practice02/src/assets/image/icon/beth.svg" alt="customer">
                         </div>
@@ -234,11 +220,11 @@
                             <p class="name">Beth Fox</p>
                             <p class="job">Developer at Airbnb</p>
                         </div>
-                    </div>
                 </div>
             </div>
             <div class="install-section">
-                <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
+                <div class="container install-section">
+                    <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                 <div class="install-app">
                     <a href ="#">
                         <img class="gg-play" src="../../Practice02/src/assets/image/icon/ggplay.svg" alt="google play">
@@ -246,6 +232,7 @@
                     <a href ="#">
                         <img class="app-store" src="../../Practice02/src/assets/image/icon/appstore.svg" alt="appstore">
                     </a>
+                </div>
                 </div>
             </div>
         </section>
