Fix hover for feature and customer, fix perfect pixel for 414px

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -97,22 +97,20 @@
                     <img src="./assets/image/timeline.png" alt="timeline">
                 </div>
                 <div class="product__content">
-                    <div class="survey-feature">
-                        <div class="text">
-                            <h4>Survey your team</h4>
-                            <p>Powerful questions that get to the heart of how team members really feel.</p>
-                        </div>
+                    <div class="ad-feature">
+                        <h4>Survey your team</h4>
+                        <p>Powerful questions that get to the heart of how team members really feel.</p>
                     </div>
                     <div class="ad-feature">
                         <h4>Resolve issues quickly</h4>
                         <p>Anonymous messaging that connects managers and employees.</p>
-                        <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
-                    </div>
+                    </div>    
+                    <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     <div class="ad-feature">
                         <h4>Plan your 1-on-1s</h4>
                         <p>Plan meetings together and give a stake employees and teams.</p>
-                        <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     </div>
+                    <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     <div class="ad-feature">
                         <h4>Track your progress</h4>
                         <p>Easy-to-read reports and sharable results help managers and teams.</p>
