--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -29,7 +29,7 @@
                         <button class="header-button">Get started free</button>
                     </div>
                     <div class="menu">
-                        <button class="menu-icon" alt="Menu"><img src="./assets/image/icon/menu.svg"></button>
+                        <button class="menu-icon"><img src="./assets/image/icon/menu.svg" alt="Menu"></button>
                         <p>MENU</p>
                     </div>
                 </div>
@@ -41,7 +41,7 @@
                             <p>Save 90%</p>
                         </div>
                         <div class="banner__get-acc">
-                            <p><a href="#">Get account of $59 <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="get account of $59"></a></p>
+                            <p><a href="#">Get account of $59 <img src="./assets/image/icon/arrow-right.svg" alt="get account of $59"></a></p>
                         </div>
                     </div>
                     <div class="banner__content">
@@ -53,7 +53,7 @@
                         <input class="submit" type="submit" value="Try it free">
                     </div>
                     <div class="graph">
-                        <img class="graph-img" src="./assets/image/graph.png" alt="Graph">
+                        <img class="graph-img" src="./assets/image/graph.jpg" alt="Graph">
                     </div>
                     <div class="banner__media-logo">
                         <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
@@ -246,7 +246,7 @@
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Contact Us</a></li>
                     </ul>
-                    <img class="vector" src="./assets/image/icon/Vector.svg">
+                    <img class="vector" src="./assets/image/icon/Vector.svg" alt="vector">
                 </div>
                 <div class="support">
                     <p>Support</p>
@@ -255,7 +255,7 @@
                         <li><a href="#">Safety Center</a></li>
                         <li><a href="#">Community</a></li>
                     </ul>
-                    <img class="vector" src="./assets/image/icon/Vector.svg">
+                    <img class="vector" src="./assets/image/icon/Vector.svg" alt="vector">
                 </div>
                 <div class="legal">
                     <p>Legal</p>
@@ -264,7 +264,7 @@
                         <li><a href="#">Privacy Policy</a></li>
                         <li><a href="#">Terms of Service</a></li>
                     </ul>
-                    <img class="vector" src="./assets/image/icon/Vector.svg">
+                    <img class="vector" src="./assets/image/icon/Vector.svg" alt="vector">
                 </div>
                 <div class="app">
                     <p>Install App</p>
