Fix width height img

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -18,10 +18,10 @@
                     </div>
                     <nav class="header__nav">
                         <ul class="header__nav-list">
-                            <li><a href="#">How it Works <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
-                            <li><a href="#">Product <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt="arrow"></a></li>
+                            <li><a href="#">How it Works <img src="./assets/image/icon/arrow.svg" alt="arrow"></a></li>
+                            <li><a href="#">Product <img src="./assets/image/icon/arrow.svg" alt="arrow"></a></li>
                             <li><a href="#">Pricing</a></li>
-                            <li><a href="#">Resources <img src="../../Practice02/src/assets/image/icon/arrow.svg" alt ="arrow"></a></li>
+                            <li><a href="#">Resources <img src="./assets/image/icon/arrow.svg" alt ="arrow"></a></li>
                         </ul>
                     </nav>
                     <div class="header__login-get-free">
@@ -100,6 +100,7 @@
                         <h4>Survey your team</h4>
                         <p>Powerful questions that get to the heart of how team members really feel.</p>
                     </div>
+                    <img class="line" src="./assets/image/line-ad-feature.png" alt="line">
                     <div class="ad-feature">
                         <h4>Resolve issues quickly</h4>
                         <p>Anonymous messaging that connects managers and employees.</p>
@@ -125,42 +126,42 @@
                 <div class="feature">
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/report.svg" alt="Reports">
+                            <img src="./assets/image/icon/report.svg" alt="Reports">
                         </div>
                         <h4>Team Surveys & Reports</h4>
                         <p>Short, anonymous surveys track your team's needs weekly so you can focus</p>
                     </div>
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/collab.svg" alt="Collaborative"> 
+                            <img src="./assets/image/icon/collab.svg" alt="Collaborative"> 
                         </div>
                         <h4>Collaborative 1:1</h4>
                         <p>Build relationships by planning 1-on-1s and start meetings.</p>
                     </div>
                     <div class="feature__descripstion">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/center.svg" alt="Learning center">
+                            <img src="./assets/image/icon/center.svg" alt="Learning center">
                         </div>
                         <h4>Learning Center</h4>
                         <p>Quickly get solutions tailored to your personal challenges from the manager.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/mess.svg" alt="Messaging">
+                            <img src="./assets/image/icon/mess.svg" alt="Messaging">
                         </div>
                         <h4>Anonymous Messaging</h4>
                         <p>Develop trust in a safe channel for important conversations.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/conver.svg" alt="Conversation">
+                            <img src="./assets/image/icon/conver.svg" alt="Conversation">
                         </div>
                         <h4>Conversation Engine</h4>
                         <p>Communicate confidently with recommended talking points.</p>
                     </div>
                     <div class="feature__descripstion__hidden">
                         <div class ="feature-img">
-                            <img src="../../Practice02/src/assets/image/icon/manage.svg" alt="Manager">
+                            <img src="./assets/image/icon/manage.svg" alt="Manager">
                         </div>
                         <h4>Exclusives Manager</h4>
                         <p>Access manager tips, activities and best practices from our team of experts.</p>
@@ -193,7 +194,7 @@
             <div class="customers-feedbacks">
                 <div class="customer-pro">
                     <div class="customer-ava" >
-                        <img  src="../../Practice02/src/assets/image/icon/jorge.svg" alt="customer">
+                        <img  src="./assets/image/icon/jorge.svg" alt="customer">
                     </div>
                     <div class="name-job">
                         <p class="name">Jorge Robertson</p>
@@ -202,7 +203,7 @@
                 </div>
                 <div class="customer-pro-hidden">
                     <div class="customer-ava"  >
-                        <img src="../../Practice02/src/assets/image/icon/bell.svg" alt="customer">
+                        <img src="./assets/image/icon/bell.svg" alt="customer">
                     </div>
                     <div class="name-job">
                         <p class="name">Francisco Bell</p>
@@ -211,7 +212,7 @@
                 </div>
                 <div class="customer-pro-hidden">
                     <div class="customer-ava" >
-                        <img  src="../../Practice02/src/assets/image/icon/beth.svg" alt="customer">
+                        <img  src="./assets/image/icon/beth.svg" alt="customer">
                     </div>
                     <div class="name-job">
                         <p class="name">Beth Fox</p>
@@ -224,10 +225,10 @@
                     <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
                         <a href ="#">
-                        <img class="gg-play" src="../../Practice02/src/assets/image/icon/ggplay.svg" alt="google play">
+                        <img class="gg-play" src="./assets/image/icon/ggplay.svg" alt="google play">
                         </a>
                         <a href ="#">
-                        <img class="app-store" src="../../Practice02/src/assets/image/icon/appstore.svg" alt="appstore">
+                        <img class="app-store" src="./assets/image/icon/appstore.svg" alt="appstore">
                         </a>
                     </div>
                 </div>
