Fix arrow footer

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -271,10 +271,10 @@
                     <p>Install App</p>
                     <div class="footer__install-app">
                         <a href="#">
-                        <img class="footer__gg-play" src="../../Practice02/src/assets/image/icon/footer-ggplay.svg" alt="google play">
+                        <img class="footer__gg-play" src="./assets/image/icon/footer-ggplay.svg" alt="google play">
                         </a>
                         <a href="#">
-                        <img class="footer__app-store" src="../../Practice02/src/assets/image/icon/footer-appstore.svg" alt="appstore">
+                        <img class="footer__app-store" src="./assets/image/icon/footer-appstore.svg" alt="appstore">
                         </a>
                     </div>
                 </div>
