--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="This is my Practice 2">
         <title>Practice2</title>
         <link rel="stylesheet" href="../src/style/sass/index.scss">
     </head>
@@ -53,7 +54,7 @@
                         <input class="submit" type="submit" value="Try it free">
                     </div>
                     <div class="graph">
-                        <img class="graph-img" src="./assets/image/graph.jpg" alt="Graph">
+                        <img class="graph-img" src="./assets/image/graph.webp" alt="Graph">
                     </div>
                     <div class="banner__media-logo">
                         <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
@@ -93,7 +94,7 @@
         <section class="product">
             <div class="container product">
                 <div class="timeline">
-                    <img src="./assets/image/timeline.png" alt="timeline">
+                    <img src="./assets/image/timeline.webp" alt="timeline">
                 </div>
                 <div class="product__content">
                     <div class="ad-feature">
