--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#fbfafe">
         <meta name="description" content="This is my Practice 2">
         <title>Practice2</title>
         <link rel="stylesheet" href="../src/style/sass/index.scss">
