Fix perfect pixel

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -182,7 +182,7 @@
                     <button class="chart-button">Get started free</button>
                 </div>
                 <div class="chart-image">
-                    <img src="assets/image/charts.png" alt="Charts">
+                    <img src="assets/image/charts.webp" alt="Charts">
                 </div>
             </div>
         </section>
