Fĩx comment internal review

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -59,33 +59,33 @@
                     </div>
                     <div class="banner__media-logo">
                         <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
-                        <div class="banner__logo">
-                            <div class="gg">
+                        <ul class="banner__logo">
+                            <li class="gg">
                                 <a href="#">
                                 <img src="assets/image/icon/google.svg" alt="google">
                                 </a>
-                            </div>
-                            <div class="air">
+                            </li>
+                            <li class="air">
                                 <a href="#">
                                 <img src="../src/assets/image/icon/airbnb.svg" alt="airbnb">
                                 </a>
-                            </div>
-                            <div class="fb">
+                            </li>
+                            <li class="fb">
                                 <a href="#">
                                 <img src="./assets/image/icon/fb.svg" alt ="facebook">
                                 </a>  
-                            </div>
-                            <div class="hub">
+                            </li>
+                            <li class="hub">
                                 <a href="#">
                                 <img src="./assets/image/icon/hub.svg" alt="hub">
                                 </a>
-                            </div>
-                            <div class="slack">
+                            </li>
+                            <li class="slack">
                                 <a href="#">
                                 <img src="./assets/image/icon/slack.svg" alt="slack">
                                 </a>
-                            </div>
-                        </div>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
