--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -11,8 +11,8 @@
     <body>
         <!--banner section start-->
         <div class="banner">
-            <header class="header">
-                <div class="container header">
+            <div class="container">
+                <header class="header">
                     <div class="header__logo">
                         <a href="#">
                         <img src="./assets/image/icon/team.flow.svg" alt="logo">
@@ -31,13 +31,12 @@
                         <button class="header-button">Get started free</button>
                     </div>
                     <div class="menu">
-                        <button class="menu-icon"><img src="./assets/image/icon/menu.svg" alt="Menu"></button>
-                        <p>MENU</p>
+                        <button class="menu-icon"><img src="./assets/image/icon/menu.svg" alt="Menu"><p>MENU</p></button>
                     </div>
-                </div>
-            </header>
-            <div class="banner__sign-up">
-                <div class="container banner__sign-up">
+                </header>
+            </div>
+            <div class="container">
+                <div class="banner__sign-up">
                     <div class="banner__discount">
                         <div class="banner__save">
                             <p>Save 90%</p>
@@ -57,27 +56,28 @@
                     <div class="graph">
                         <img class="graph-img" src="./assets/image/graph.webp" alt="Graph">
                     </div>
-                    <div class="banner__media-logo">
+                    <div class="container">
+                        <div class="banner__media-logo">
                         <p class="banner__logo-content">TRUSTED BY OVER <b>10.000+</b> WORLD'S BEST TEAMS</p>
                         <ul class="banner__logo">
-                            <li class="gg">
+                            <li class="google">
                                 <a href="#">
                                 <img src="assets/image/icon/google.svg" alt="google">
                                 </a>
                             </li>
-                            <li class="air">
+                            <li class="airbnb">
                                 <a href="#">
                                 <img src="../src/assets/image/icon/airbnb.svg" alt="airbnb">
                                 </a>
                             </li>
-                            <li class="fb">
+                            <li class="facebook">
                                 <a href="#">
                                 <img src="./assets/image/icon/fb.svg" alt ="facebook">
                                 </a>  
                             </li>
                             <li class="hub">
                                 <a href="#">
-                                <img src="./assets/image/icon/hub.svg" alt="hub">
+                                <img src="./assets/image/icon/hub.svg" alt="hubspot">
                                 </a>
                             </li>
                             <li class="slack">
@@ -87,7 +87,7 @@
                             </li>
                         </ul>
                     </div>
-                </div>
+                </div>                    
             </div>
         </div>
         <!--banner section end-->
