Fix comment public review

--- a/Practice02/src/index.html
+++ b/Practice02/src/index.html
@@ -75,7 +75,7 @@
                                 <img src="./assets/image/icon/fb.svg" alt ="facebook">
                                 </a>  
                             </li>
-                            <li class="hub">
+                            <li class="hubspot">
                                 <a href="#">
                                 <img src="./assets/image/icon/hub.svg" alt="hubspot">
                                 </a>
@@ -92,8 +92,8 @@
         </div>
         <!--banner section end-->
         <!--product section start-->
-        <section class="product">
-            <div class="container product">
+        <section class="container">
+            <div class="product">
                 <div class="timeline">
                     <img src="./assets/image/timeline.webp" alt="timeline">
                 </div>
@@ -122,8 +122,8 @@
         </section>
         <!--product section end-->
         <!--functions section start-->
-        <section class="functions">
-            <div class="container functions">
+        <section class="container ">
+            <div class="functions">
                 <h2 class="functions__headline">Make your work easier</h2>
                 <div class="feature">
                     <div class="feature__descripstion">
@@ -174,8 +174,8 @@
         </section>
         <!--funtions section end-->
         <!--charts section start-->
-        <section class="charts">
-            <div class="container charts">
+        <section class="container">
+            <div class="charts">
                 <div class="chart__content">
                     <h2> We work how you work everyday</h2>
                     <p>Since the easiest things to use actually get used, we adapts to the way your team works – not the other way around.</p>
@@ -222,8 +222,8 @@
                     </div>
                 </div>
             </div>
-            <div class="install-section">
-                <div class="container install-section">
+            <div class="container">
+                <div class="install-section">
                     <h3 class="install-section__headline">84% of employees who use trust their direct manager</h3>
                     <div class="install-app">
                         <a href ="#">
@@ -283,8 +283,8 @@
                 </div>
             </div>
             <div class="line-footer"></div>
-            <div class="footer__copy-right">
-                <div class="container footer__copy-right">
+            <div class="container">
+                <div class="footer__copy-right">
                     <p class="copy-right">© 2020 - All rights reserved</p>
                     <div class="social-icon">
                         <a href="#">
